--- a/pom.xml
+++ b/pom.xml
@@ -24,38 +24,17 @@
 			<artifactId>spring-boot-starter-integration</artifactId>
 		</dependency>
 
-		<!-- Spring Boot Starter ActiveMQ (includes ActiveMQ support) -->
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-http</artifactId>
+			<version>5.4.6</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-activemq</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Spring Integration JMS support -->
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-jms</artifactId>
-			<version>5.4.6</version>
-		</dependency>
-
-		<!-- Jackson Databind for JSON processing -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
-
-		<!-- Spring Integration File support -->
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-file</artifactId>
-			<version>5.4.6</version>
-		</dependency>
-
-		<!-- H2 Database -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.4.200</version>
-		</dependency>
 
 		<!-- Spring Boot Starter Test (for testing) -->
 		<dependency>
@@ -63,20 +42,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- Spring Boot Starter JDBC (includes JDBC support) -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-
-		<!-- Spring Integration JDBC -->
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-jdbc</artifactId>
-			<version>5.4.6</version>
-		</dependency>
-
 		<!-- Spring Integration Test support -->
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
